--- a/style.css
+++ b/style.css
@@ -39,6 +39,27 @@ h1 {
   flex-shrink: 0; /* évite que les colonnes rétrécissent trop dans le flex */
 }
 
+/*Modifs de la palette de couleurs pour éviter les contrastes*/
+.col-a-faire {
+  background-color: #4fc3f7; /* bleu clair */
+  color: #000;
+}
+
+.col-en-cours {
+  background-color: #81c784; /* vert doux */
+  color: #000;
+}
+
+.col-terminé {
+  background-color: #ffb74d; /* orange */
+  color: #000;
+}
+
+.col-approuve {
+  background-color: #ba68c8; /* violet */
+  color: #000000; /* contraste fort sur fond foncé */
+}
+/*
 .col-a-faire {
   background-color: #7fffec;
 }
@@ -53,7 +74,8 @@ h1 {
 
 .col-approuve {
   background-color: #da78d5;
-}
+}*/
+
 .liste h2 {
   margin-top: 0;
   font-size: 1.2em;
@@ -61,13 +83,15 @@ h1 {
 }
 
 .ajouter-colonne {
-  background-color: #09ff00;
+  /*  background-color: #09ff00;*/
+  background-color: #4caf50;
   transition: background-color 0.3s ease;
   border-radius: 4px;
 }
 
 .ajouter-colonne:hover {
-  background-color: #fff700;
+  /*  background-color: #fff700;*/
+  background-color: #388e3c;
 }
 
 .col-nouvelle {
@@ -119,7 +143,8 @@ h1 {
 
 .btn-ajouter-tache {
   padding: 10px;
-  background-color: #aeaea7;
+  /*  background-color: #aeaea7;*/
+  background-color: #2196f3;
   color: rgb(0, 0, 0);
   border: none;
   cursor: pointer;
@@ -137,7 +162,8 @@ h1 {
 }
 
 .btn-supprimer-colonne {
-  background: #ff4757;
+  /*  background: #ff4757; */
+  background: #e53935;
   color: white;
   border: none;
   border-radius: 50%;
@@ -149,7 +175,8 @@ h1 {
 }
 
 .btn-supprimer-colonne:hover {
-  background: #ff3742;
+  /*  background: #ff3742;*/
+  background: #b71c1c;
 }
 
 /* responsive — tablettes et petits écrans */
@@ -213,8 +240,6 @@ h1 {
 }
 
 .accueil button {
-  background-color: #3498db;
-  color: white;
   border: none;
   padding: 0.8rem 1.2rem;
   border-radius: 0.5rem;
